Updating config name

--- a/application.yaml
+++ b/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: hello-ptc
+  name: hello-ptc-argocd
   namespace: argocd
 spec:
   project: default
